--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 769px) {
   header {
-    padding: .75rem;
+    padding: 0.75rem;
     font-size: 1.75rem;
     text-align: left;
   }
@@ -10,13 +10,13 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: center;
+    align-items: start;
     padding: 1rem;
     margin: 3rem auto;
     gap: 1.25rem;
   }
 
   #form-box {
-    margin-top: 2rem;
     width: 100%;
     display: flex;
     flex-direction: column;
